parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    AND
    ELSE
    EMPTY
    HASHROCKET
    HAS_VALUE
    IF
    INCLUDE
    MERGE
    OR
    QUESTION
    SIZE
    UPCASE
    WHILE

Grammar

Rule 0     S' -> STATEMENT
Rule 1     STATEMENT -> EXPRESSION
Rule 2     STATEMENT -> ASIGNATION
Rule 3     STATEMENT -> STRUCTURE_FOR
Rule 4     ASIGNATION -> ID ASIGN EXPRESSION
Rule 5     EXPRESSION -> NUMBER
Rule 6     EXPRESSION -> FLOAT
Rule 7     EXPRESSION -> BOOLEAN
Rule 8     EXPRESSION -> STRING
Rule 9     EXPRESSION -> OTHERSTRINGDECLARATION
Rule 10    EXPRESSION -> ARRAY
Rule 11    EXPRESSION -> FUNTIONS_ARRAY
Rule 12    EXPRESSION -> LOGIC_NOT EXPRESSION
Rule 13    EXPRESSION -> EXPRESSION_MAT
Rule 14    EXPRESSION -> EXPRESSION_CONCAT
Rule 15    EXPRESSION -> PUTS EXPRESSION
Rule 16    EXPRESSION -> PUTS ID
Rule 17    EXPRESSION -> GETS
Rule 18    EXPRESSION -> BOOLEAN OPERATOR_COMP_BOOLEAN BOOLEAN
Rule 19    EXPRESSION -> DATASTRING OPERATOR_COMP_BOOLEAN DATASTRING
Rule 20    OPERATOR_COMP_BOOLEAN -> EQUAL
Rule 21    OPERATOR_COMP_BOOLEAN -> EQUAL_STRICT
Rule 22    OPERATOR_COMP_BOOLEAN -> LOGIC_AND
Rule 23    OPERATOR_COMP_BOOLEAN -> LOGIC_OR
Rule 24    OPERATOR_COMP_BOOLEAN -> PIPE
Rule 25    EXPRESSION -> DATANF OPERATOR_COMP_MAT DATANF
Rule 26    EXPRESSION_MAT -> EXPRESSION_MAT OPERATOR_MAT EXPRESSION_MAT
Rule 27    EXPRESSION_MAT -> LPAREN EXPRESSION_MAT RPAREN
Rule 28    EXPRESSION_MAT -> DATANF
Rule 29    DATANF -> NUMBER
Rule 30    DATANF -> FLOAT
Rule 31    DATANF -> ID
Rule 32    EXPRESSION_CONCAT -> EXPRESSION_CONCAT PLUS EXPRESSION_CONCAT
Rule 33    EXPRESSION_CONCAT -> DATASTRING
Rule 34    EXPRESSION_CONCAT -> ARRAY
Rule 35    ARRAY -> ALFT DATA ARGT
Rule 36    FUNTIONS_ARRAY -> ARRAY POINT FUNTIONS_ALLOWED_ARRAY
Rule 37    FUNTIONS_ALLOWED_ARRAY -> MIN
Rule 38    FUNTIONS_ALLOWED_ARRAY -> FIRST
Rule 39    FUNTIONS_ALLOWED_ARRAY -> MAP_ARRAY
Rule 40    MAP_ARRAY -> MAP OPENINGCB PIPE ID PIPE DATA_REPEAT_MAP CLOSURECB
Rule 41    DATA_REPEAT_MAP -> STATEMENT
Rule 42    DATA_REPEAT_MAP -> STATEMENT DATA_REPEAT_MAP
Rule 43    DATA_ALLOWED_IN_MAP -> ASIGNATION
Rule 44    DATA_ALLOWED_IN_MAP -> EXPRESSION
Rule 45    STRUCTURE_FOR -> STRUCTURE_IN_FOR DATA_REPEAT END
Rule 46    STRUCTURE_IN_FOR -> FOR ID IN ARRAY DO
Rule 47    STRUCTURE_IN_FOR -> FOR ID IN ID DO
Rule 48    DATA_REPEAT -> DATA_ALLOWED_IN_FOR
Rule 49    DATA_REPEAT -> DATA_ALLOWED_IN_FOR DATA_REPEAT
Rule 50    DATA_ALLOWED_IN_FOR -> ASIGNATION
Rule 51    DATA_ALLOWED_IN_FOR -> EXPRESSION
Rule 52    DATA -> NUMBER
Rule 53    DATA -> FLOAT
Rule 54    DATA -> BOOLEAN
Rule 55    DATA -> STRING
Rule 56    DATA -> DATA COMMA DATA
Rule 57    DATASTRING -> STRING
Rule 58    DATASTRING -> OTHERSTRINGDECLARATION
Rule 59    BOOLEAN -> TRUE
Rule 60    BOOLEAN -> FALSE
Rule 61    BOOLEAN -> LOGIC_NOT TRUE
Rule 62    BOOLEAN -> LOGIC_NOT FALSE
Rule 63    OPERATOR_MAT -> PLUS
Rule 64    OPERATOR_MAT -> MINUS
Rule 65    OPERATOR_MAT -> TIMES
Rule 66    OPERATOR_MAT -> DIVIDE
Rule 67    OPERATOR_MAT -> EXPONENTIATION
Rule 68    OPERATOR_COMP_MAT -> EQUAL
Rule 69    OPERATOR_COMP_MAT -> EQUAL_STRICT
Rule 70    OPERATOR_COMP_MAT -> GREATER_THAN_OR_EQUAL
Rule 71    OPERATOR_COMP_MAT -> MINOR_THAN_OR_EQUAL
Rule 72    OPERATOR_COMP_MAT -> MINOR
Rule 73    OPERATOR_COMP_MAT -> GREATER
Rule 74    OPERATOR_COMP_MAT -> LOGIC_AND
Rule 75    OPERATOR_COMP_MAT -> LOGIC_OR
Rule 76    OPERATOR_COMP_MAT -> PIPE

Terminals, with rules where they appear

ALFT                 : 35
AND                  : 
ARGT                 : 35
ASIGN                : 4
CLOSURECB            : 40
COMMA                : 56
DIVIDE               : 66
DO                   : 46 47
ELSE                 : 
EMPTY                : 
END                  : 45
EQUAL                : 20 68
EQUAL_STRICT         : 21 69
EXPONENTIATION       : 67
FALSE                : 60 62
FIRST                : 38
FLOAT                : 6 30 53
FOR                  : 46 47
GETS                 : 17
GREATER              : 73
GREATER_THAN_OR_EQUAL : 70
HASHROCKET           : 
HAS_VALUE            : 
ID                   : 4 16 31 40 46 47 47
IF                   : 
IN                   : 46 47
INCLUDE              : 
LOGIC_AND            : 22 74
LOGIC_NOT            : 12 61 62
LOGIC_OR             : 23 75
LPAREN               : 27
MAP                  : 40
MERGE                : 
MIN                  : 37
MINOR                : 72
MINOR_THAN_OR_EQUAL  : 71
MINUS                : 64
NUMBER               : 5 29 52
OPENINGCB            : 40
OR                   : 
OTHERSTRINGDECLARATION : 9 58
PIPE                 : 24 40 40 76
PLUS                 : 32 63
POINT                : 36
PUTS                 : 15 16
QUESTION             : 
RPAREN               : 27
SIZE                 : 
STRING               : 8 55 57
TIMES                : 65
TRUE                 : 59 61
UPCASE               : 
WHILE                : 
error                : 

Nonterminals, with rules where they appear

ARRAY                : 10 34 36 46
ASIGNATION           : 2 43 50
BOOLEAN              : 7 18 18 54
DATA                 : 35 56 56
DATANF               : 25 25 28
DATASTRING           : 19 19 33
DATA_ALLOWED_IN_FOR  : 48 49
DATA_ALLOWED_IN_MAP  : 
DATA_REPEAT          : 45 49
DATA_REPEAT_MAP      : 40 42
EXPRESSION           : 1 4 12 15 44 51
EXPRESSION_CONCAT    : 14 32 32
EXPRESSION_MAT       : 13 26 26 27
FUNTIONS_ALLOWED_ARRAY : 36
FUNTIONS_ARRAY       : 11
MAP_ARRAY            : 39
OPERATOR_COMP_BOOLEAN : 18 19
OPERATOR_COMP_MAT    : 25
OPERATOR_MAT         : 26
STATEMENT            : 41 42 0
STRUCTURE_FOR        : 3
STRUCTURE_IN_FOR     : 45

Parsing method: LALR

state 0

    (0) S' -> . STATEMENT
    (1) STATEMENT -> . EXPRESSION
    (2) STATEMENT -> . ASIGNATION
    (3) STATEMENT -> . STRUCTURE_FOR
    (5) EXPRESSION -> . NUMBER
    (6) EXPRESSION -> . FLOAT
    (7) EXPRESSION -> . BOOLEAN
    (8) EXPRESSION -> . STRING
    (9) EXPRESSION -> . OTHERSTRINGDECLARATION
    (10) EXPRESSION -> . ARRAY
    (11) EXPRESSION -> . FUNTIONS_ARRAY
    (12) EXPRESSION -> . LOGIC_NOT EXPRESSION
    (13) EXPRESSION -> . EXPRESSION_MAT
    (14) EXPRESSION -> . EXPRESSION_CONCAT
    (15) EXPRESSION -> . PUTS EXPRESSION
    (16) EXPRESSION -> . PUTS ID
    (17) EXPRESSION -> . GETS
    (18) EXPRESSION -> . BOOLEAN OPERATOR_COMP_BOOLEAN BOOLEAN
    (19) EXPRESSION -> . DATASTRING OPERATOR_COMP_BOOLEAN DATASTRING
    (25) EXPRESSION -> . DATANF OPERATOR_COMP_MAT DATANF
    (4) ASIGNATION -> . ID ASIGN EXPRESSION
    (45) STRUCTURE_FOR -> . STRUCTURE_IN_FOR DATA_REPEAT END
    (59) BOOLEAN -> . TRUE
    (60) BOOLEAN -> . FALSE
    (61) BOOLEAN -> . LOGIC_NOT TRUE
    (62) BOOLEAN -> . LOGIC_NOT FALSE
    (35) ARRAY -> . ALFT DATA ARGT
    (36) FUNTIONS_ARRAY -> . ARRAY POINT FUNTIONS_ALLOWED_ARRAY
    (26) EXPRESSION_MAT -> . EXPRESSION_MAT OPERATOR_MAT EXPRESSION_MAT
    (27) EXPRESSION_MAT -> . LPAREN EXPRESSION_MAT RPAREN
    (28) EXPRESSION_MAT -> . DATANF
    (32) EXPRESSION_CONCAT -> . EXPRESSION_CONCAT PLUS EXPRESSION_CONCAT
    (33) EXPRESSION_CONCAT -> . DATASTRING
    (34) EXPRESSION_CONCAT -> . ARRAY
    (57) DATASTRING -> . STRING
    (58) DATASTRING -> . OTHERSTRINGDECLARATION
    (29) DATANF -> . NUMBER
    (30) DATANF -> . FLOAT
    (31) DATANF -> . ID
    (46) STRUCTURE_IN_FOR -> . FOR ID IN ARRAY DO
    (47) STRUCTURE_IN_FOR -> . FOR ID IN ID DO

    NUMBER          shift and go to state 5
    FLOAT           shift and go to state 6
    STRING          shift and go to state 8
    OTHERSTRINGDECLARATION shift and go to state 9
    LOGIC_NOT       shift and go to state 12
    PUTS            shift and go to state 15
    GETS            shift and go to state 17
    ID              shift and go to state 16
    TRUE            shift and go to state 21
    FALSE           shift and go to state 22
    ALFT            shift and go to state 23
    LPAREN          shift and go to state 24
    FOR             shift and go to state 25

    STATEMENT                      shift and go to state 1
    EXPRESSION                     shift and go to state 2
    ASIGNATION                     shift and go to state 3
    STRUCTURE_FOR                  shift and go to state 4
    BOOLEAN                        shift and go to state 7
    ARRAY                          shift and go to state 10
    FUNTIONS_ARRAY                 shift and go to state 11
    EXPRESSION_MAT                 shift and go to state 13
    EXPRESSION_CONCAT              shift and go to state 14
    DATASTRING                     shift and go to state 18
    DATANF                         shift and go to state 19
    STRUCTURE_IN_FOR               shift and go to state 20

state 1

    (0) S' -> STATEMENT .



state 2

    (1) STATEMENT -> EXPRESSION .

    $end            reduce using rule 1 (STATEMENT -> EXPRESSION .)
    NUMBER          reduce using rule 1 (STATEMENT -> EXPRESSION .)
    FLOAT           reduce using rule 1 (STATEMENT -> EXPRESSION .)
    STRING          reduce using rule 1 (STATEMENT -> EXPRESSION .)
    OTHERSTRINGDECLARATION reduce using rule 1 (STATEMENT -> EXPRESSION .)
    LOGIC_NOT       reduce using rule 1 (STATEMENT -> EXPRESSION .)
    PUTS            reduce using rule 1 (STATEMENT -> EXPRESSION .)
    GETS            reduce using rule 1 (STATEMENT -> EXPRESSION .)
    ID              reduce using rule 1 (STATEMENT -> EXPRESSION .)
    TRUE            reduce using rule 1 (STATEMENT -> EXPRESSION .)
    FALSE           reduce using rule 1 (STATEMENT -> EXPRESSION .)
    ALFT            reduce using rule 1 (STATEMENT -> EXPRESSION .)
    LPAREN          reduce using rule 1 (STATEMENT -> EXPRESSION .)
    FOR             reduce using rule 1 (STATEMENT -> EXPRESSION .)
    CLOSURECB       reduce using rule 1 (STATEMENT -> EXPRESSION .)


state 3

    (2) STATEMENT -> ASIGNATION .

    $end            reduce using rule 2 (STATEMENT -> ASIGNATION .)
    NUMBER          reduce using rule 2 (STATEMENT -> ASIGNATION .)
    FLOAT           reduce using rule 2 (STATEMENT -> ASIGNATION .)
    STRING          reduce using rule 2 (STATEMENT -> ASIGNATION .)
    OTHERSTRINGDECLARATION reduce using rule 2 (STATEMENT -> ASIGNATION .)
    LOGIC_NOT       reduce using rule 2 (STATEMENT -> ASIGNATION .)
    PUTS            reduce using rule 2 (STATEMENT -> ASIGNATION .)
    GETS            reduce using rule 2 (STATEMENT -> ASIGNATION .)
    ID              reduce using rule 2 (STATEMENT -> ASIGNATION .)
    TRUE            reduce using rule 2 (STATEMENT -> ASIGNATION .)
    FALSE           reduce using rule 2 (STATEMENT -> ASIGNATION .)
    ALFT            reduce using rule 2 (STATEMENT -> ASIGNATION .)
    LPAREN          reduce using rule 2 (STATEMENT -> ASIGNATION .)
    FOR             reduce using rule 2 (STATEMENT -> ASIGNATION .)
    CLOSURECB       reduce using rule 2 (STATEMENT -> ASIGNATION .)


state 4

    (3) STATEMENT -> STRUCTURE_FOR .

    $end            reduce using rule 3 (STATEMENT -> STRUCTURE_FOR .)
    NUMBER          reduce using rule 3 (STATEMENT -> STRUCTURE_FOR .)
    FLOAT           reduce using rule 3 (STATEMENT -> STRUCTURE_FOR .)
    STRING          reduce using rule 3 (STATEMENT -> STRUCTURE_FOR .)
    OTHERSTRINGDECLARATION reduce using rule 3 (STATEMENT -> STRUCTURE_FOR .)
    LOGIC_NOT       reduce using rule 3 (STATEMENT -> STRUCTURE_FOR .)
    PUTS            reduce using rule 3 (STATEMENT -> STRUCTURE_FOR .)
    GETS            reduce using rule 3 (STATEMENT -> STRUCTURE_FOR .)
    ID              reduce using rule 3 (STATEMENT -> STRUCTURE_FOR .)
    TRUE            reduce using rule 3 (STATEMENT -> STRUCTURE_FOR .)
    FALSE           reduce using rule 3 (STATEMENT -> STRUCTURE_FOR .)
    ALFT            reduce using rule 3 (STATEMENT -> STRUCTURE_FOR .)
    LPAREN          reduce using rule 3 (STATEMENT -> STRUCTURE_FOR .)
    FOR             reduce using rule 3 (STATEMENT -> STRUCTURE_FOR .)
    CLOSURECB       reduce using rule 3 (STATEMENT -> STRUCTURE_FOR .)


state 5

    (5) EXPRESSION -> NUMBER .
    (29) DATANF -> NUMBER .

  ! reduce/reduce conflict for $end resolved using rule 5 (EXPRESSION -> NUMBER .)
  ! reduce/reduce conflict for ID resolved using rule 5 (EXPRESSION -> NUMBER .)
  ! reduce/reduce conflict for NUMBER resolved using rule 5 (EXPRESSION -> NUMBER .)
  ! reduce/reduce conflict for FLOAT resolved using rule 5 (EXPRESSION -> NUMBER .)
  ! reduce/reduce conflict for STRING resolved using rule 5 (EXPRESSION -> NUMBER .)
  ! reduce/reduce conflict for OTHERSTRINGDECLARATION resolved using rule 5 (EXPRESSION -> NUMBER .)
  ! reduce/reduce conflict for LOGIC_NOT resolved using rule 5 (EXPRESSION -> NUMBER .)
  ! reduce/reduce conflict for PUTS resolved using rule 5 (EXPRESSION -> NUMBER .)
  ! reduce/reduce conflict for GETS resolved using rule 5 (EXPRESSION -> NUMBER .)
  ! reduce/reduce conflict for TRUE resolved using rule 5 (EXPRESSION -> NUMBER .)
  ! reduce/reduce conflict for FALSE resolved using rule 5 (EXPRESSION -> NUMBER .)
  ! reduce/reduce conflict for ALFT resolved using rule 5 (EXPRESSION -> NUMBER .)
  ! reduce/reduce conflict for LPAREN resolved using rule 5 (EXPRESSION -> NUMBER .)
  ! reduce/reduce conflict for END resolved using rule 5 (EXPRESSION -> NUMBER .)
  ! reduce/reduce conflict for FOR resolved using rule 5 (EXPRESSION -> NUMBER .)
  ! reduce/reduce conflict for CLOSURECB resolved using rule 5 (EXPRESSION -> NUMBER .)
    $end            reduce using rule 5 (EXPRESSION -> NUMBER .)
    ID              reduce using rule 5 (EXPRESSION -> NUMBER .)
    NUMBER          reduce using rule 5 (EXPRESSION -> NUMBER .)
    FLOAT           reduce using rule 5 (EXPRESSION -> NUMBER .)
    STRING          reduce using rule 5 (EXPRESSION -> NUMBER .)
    OTHERSTRINGDECLARATION reduce using rule 5 (EXPRESSION -> NUMBER .)
    LOGIC_NOT       reduce using rule 5 (EXPRESSION -> NUMBER .)
    PUTS            reduce using rule 5 (EXPRESSION -> NUMBER .)
    GETS            reduce using rule 5 (EXPRESSION -> NUMBER .)
    TRUE            reduce using rule 5 (EXPRESSION -> NUMBER .)
    FALSE           reduce using rule 5 (EXPRESSION -> NUMBER .)
    ALFT            reduce using rule 5 (EXPRESSION -> NUMBER .)
    LPAREN          reduce using rule 5 (EXPRESSION -> NUMBER .)
    END             reduce using rule 5 (EXPRESSION -> NUMBER .)
    FOR             reduce using rule 5 (EXPRESSION -> NUMBER .)
    CLOSURECB       reduce using rule 5 (EXPRESSION -> NUMBER .)
    EQUAL           reduce using rule 29 (DATANF -> NUMBER .)
    EQUAL_STRICT    reduce using rule 29 (DATANF -> NUMBER .)
    GREATER_THAN_OR_EQUAL reduce using rule 29 (DATANF -> NUMBER .)
    MINOR_THAN_OR_EQUAL reduce using rule 29 (DATANF -> NUMBER .)
    MINOR           reduce using rule 29 (DATANF -> NUMBER .)
    GREATER         reduce using rule 29 (DATANF -> NUMBER .)
    LOGIC_AND       reduce using rule 29 (DATANF -> NUMBER .)
    LOGIC_OR        reduce using rule 29 (DATANF -> NUMBER .)
    PIPE            reduce using rule 29 (DATANF -> NUMBER .)
    PLUS            reduce using rule 29 (DATANF -> NUMBER .)
    MINUS           reduce using rule 29 (DATANF -> NUMBER .)
    TIMES           reduce using rule 29 (DATANF -> NUMBER .)
    DIVIDE          reduce using rule 29 (DATANF -> NUMBER .)
    EXPONENTIATION  reduce using rule 29 (DATANF -> NUMBER .)

  ! $end            [ reduce using rule 29 (DATANF -> NUMBER .) ]
  ! ID              [ reduce using rule 29 (DATANF -> NUMBER .) ]
  ! NUMBER          [ reduce using rule 29 (DATANF -> NUMBER .) ]
  ! FLOAT           [ reduce using rule 29 (DATANF -> NUMBER .) ]
  ! STRING          [ reduce using rule 29 (DATANF -> NUMBER .) ]
  ! OTHERSTRINGDECLARATION [ reduce using rule 29 (DATANF -> NUMBER .) ]
  ! LOGIC_NOT       [ reduce using rule 29 (DATANF -> NUMBER .) ]
  ! PUTS            [ reduce using rule 29 (DATANF -> NUMBER .) ]
  ! GETS            [ reduce using rule 29 (DATANF -> NUMBER .) ]
  ! TRUE            [ reduce using rule 29 (DATANF -> NUMBER .) ]
  ! FALSE           [ reduce using rule 29 (DATANF -> NUMBER .) ]
  ! ALFT            [ reduce using rule 29 (DATANF -> NUMBER .) ]
  ! LPAREN          [ reduce using rule 29 (DATANF -> NUMBER .) ]
  ! END             [ reduce using rule 29 (DATANF -> NUMBER .) ]
  ! FOR             [ reduce using rule 29 (DATANF -> NUMBER .) ]
  ! CLOSURECB       [ reduce using rule 29 (DATANF -> NUMBER .) ]


state 6

    (6) EXPRESSION -> FLOAT .
    (30) DATANF -> FLOAT .

  ! reduce/reduce conflict for $end resolved using rule 6 (EXPRESSION -> FLOAT .)
  ! reduce/reduce conflict for ID resolved using rule 6 (EXPRESSION -> FLOAT .)
  ! reduce/reduce conflict for NUMBER resolved using rule 6 (EXPRESSION -> FLOAT .)
  ! reduce/reduce conflict for FLOAT resolved using rule 6 (EXPRESSION -> FLOAT .)
  ! reduce/reduce conflict for STRING resolved using rule 6 (EXPRESSION -> FLOAT .)
  ! reduce/reduce conflict for OTHERSTRINGDECLARATION resolved using rule 6 (EXPRESSION -> FLOAT .)
  ! reduce/reduce conflict for LOGIC_NOT resolved using rule 6 (EXPRESSION -> FLOAT .)
  ! reduce/reduce conflict for PUTS resolved using rule 6 (EXPRESSION -> FLOAT .)
  ! reduce/reduce conflict for GETS resolved using rule 6 (EXPRESSION -> FLOAT .)
  ! reduce/reduce conflict for TRUE resolved using rule 6 (EXPRESSION -> FLOAT .)
  ! reduce/reduce conflict for FALSE resolved using rule 6 (EXPRESSION -> FLOAT .)
  ! reduce/reduce conflict for ALFT resolved using rule 6 (EXPRESSION -> FLOAT .)
  ! reduce/reduce conflict for LPAREN resolved using rule 6 (EXPRESSION -> FLOAT .)
  ! reduce/reduce conflict for END resolved using rule 6 (EXPRESSION -> FLOAT .)
  ! reduce/reduce conflict for FOR resolved using rule 6 (EXPRESSION -> FLOAT .)
  ! reduce/reduce conflict for CLOSURECB resolved using rule 6 (EXPRESSION -> FLOAT .)
    $end            reduce using rule 6 (EXPRESSION -> FLOAT .)
    ID              reduce using rule 6 (EXPRESSION -> FLOAT .)
    NUMBER          reduce using rule 6 (EXPRESSION -> FLOAT .)
    FLOAT           reduce using rule 6 (EXPRESSION -> FLOAT .)
    STRING          reduce using rule 6 (EXPRESSION -> FLOAT .)
    OTHERSTRINGDECLARATION reduce using rule 6 (EXPRESSION -> FLOAT .)
    LOGIC_NOT       reduce using rule 6 (EXPRESSION -> FLOAT .)
    PUTS            reduce using rule 6 (EXPRESSION -> FLOAT .)
    GETS            reduce using rule 6 (EXPRESSION -> FLOAT .)
    TRUE            reduce using rule 6 (EXPRESSION -> FLOAT .)
    FALSE           reduce using rule 6 (EXPRESSION -> FLOAT .)
    ALFT            reduce using rule 6 (EXPRESSION -> FLOAT .)
    LPAREN          reduce using rule 6 (EXPRESSION -> FLOAT .)
    END             reduce using rule 6 (EXPRESSION -> FLOAT .)
    FOR             reduce using rule 6 (EXPRESSION -> FLOAT .)
    CLOSURECB       reduce using rule 6 (EXPRESSION -> FLOAT .)
    EQUAL           reduce using rule 30 (DATANF -> FLOAT .)
    EQUAL_STRICT    reduce using rule 30 (DATANF -> FLOAT .)
    GREATER_THAN_OR_EQUAL reduce using rule 30 (DATANF -> FLOAT .)
    MINOR_THAN_OR_EQUAL reduce using rule 30 (DATANF -> FLOAT .)
    MINOR           reduce using rule 30 (DATANF -> FLOAT .)
    GREATER         reduce using rule 30 (DATANF -> FLOAT .)
    LOGIC_AND       reduce using rule 30 (DATANF -> FLOAT .)
    LOGIC_OR        reduce using rule 30 (DATANF -> FLOAT .)
    PIPE            reduce using rule 30 (DATANF -> FLOAT .)
    PLUS            reduce using rule 30 (DATANF -> FLOAT .)
    MINUS           reduce using rule 30 (DATANF -> FLOAT .)
    TIMES           reduce using rule 30 (DATANF -> FLOAT .)
    DIVIDE          reduce using rule 30 (DATANF -> FLOAT .)
    EXPONENTIATION  reduce using rule 30 (DATANF -> FLOAT .)
